Crypto library update
Old one used a broken base64 library.